mobile ver finish

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <br>
     <div class="item-container sp-between"> <!-- foto name social block begin-->
-      <div class="first-col">
+      <div class="first-col first-col-xs">
         <ul>
           <li><h1>Alexandr</h1></li>
           <li>Ruby developer</li>
@@ -136,9 +136,12 @@
         </div>
         <br>
 
-        RUBY ON RAILS ONLINE COURSE 
+        GOODPROGRAMMER ONLINE COURSE
         <div class="edu-describe">
           <p>2017</p>
+          <p>
+            Ruby on Rails online course 
+          </p>
           <p>
             <a href="https://goodprogrammer.ru">goodprogrammer.ru</a>
           </p>
@@ -148,11 +151,12 @@
     </div> <!-- education block end-->
 
     <div class="item-container">
-      <div class="">
+      <div>
         <p>
           <h2>Other</h2>          
         </p>
-        <div>
+        <!-- books -->
+        <!-- <div>
           Books
           <ul>
             <li>Hal Fulton - The Ruby Way</li>
@@ -161,7 +165,7 @@
             <li>Grady Booch - Object-Oriented Analysis and Design with Applications</li>
             <li>Alan Beaulieu - Learning SQL</li>
           </ul>          
-        </div>
+        </div> -->
         <div>
           Deep learn now:
           <ul>
@@ -174,8 +178,12 @@
   </div><!-- END MAIN CONTAINER  -->
   <footer>
     <div class="container">
-      asd
-    </div>
+      <div class="item-container sp-between">
+        <!-- <div class="footer-link">1</div>
+        <div class="footer-link">2</div>
+        <div class="footer-link">3</div> -->
+      </div>
+      </div>
   </footer>
 </body>
 </html>
