--- a/ru.html
+++ b/ru.html
@@ -49,7 +49,7 @@
       <div>
         <h2>Кто я?</h2>
         <p>
-          Я разработчик Ruby on Rails, баскетболист (любитель) и семьянин. Вы можете найти меня на <a href="https://linkedin.com/in/avbabushkin">LinkedIn</a> или написать мне <a href="mailto:alexbub72@dmail.com">email</a>. Больше года работаю с Ruby / Rails, люблю кодить и совершенствовать свои навыки каждый день.  
+          Я разработчик Ruby on Rails, баскетболист (любитель) и семьянин. Вы можете найти меня на <a href="https://linkedin.com/in/avbabushkin">LinkedIn</a> или написать мне <a href="mailto:alexbub72@dmail.com">email</a>. Больше года работаю с Ruby / Rails, люблю кодить и совершенствовать свои навыки.  
         </p>
       </div>
       <div class="second-col">
@@ -152,7 +152,8 @@
         <div>
           Немного обо мне :
           <p>Играю в стритбол, баскетбол. Предпочитаю актиный отдых</p>
-          
+        <!-- books -->
+        <!-- <div>
           <h2>Книги</h2>
           <ul>
             <li>Hal Fulton - The Ruby Way</li>
@@ -161,9 +162,10 @@
             <li>Grady Booch - Object-Oriented Analysis and Design with Applications</li>
             <li>Alan Beaulieu - Learning SQL</li>
           </ul>          
+        </div> -->
         </div>
         <div>
-          Deep learn now:
+        Погружаюсь в:
           <ul>
             <li>JavaScript</li>
             <li>React</li>
