--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <img src="img/photo2.jpeg" alt="" class="photo">
       </div>
     </div><!--foto name social block end -->
-
+    <hr>
     <div class="item-container sp-between"> <!-- about me block begin -->
-      <div>
+      <div class="first-col">
         <h2>Who am I?</h2>
         <p>
           I am Ruby on Rails developer, baller and family man. You can find me on 
@@ -64,7 +64,6 @@
         </ul>
       </div>
     </div><!-- About me block end -->
-    
     <div class="item-container sp-between"><!-- skills block begin -->
       <div class="first-col">
         <h2>Skills</h2>
