--- a/ru.html
+++ b/ru.html
@@ -44,9 +44,9 @@
         <img src="img/photo2.jpeg" alt="" class="photo">
       </div>
     </div><!--foto name social block end -->
-
+    <hr>
     <div class="item-container sp-between"> <!-- about me block begin -->
-      <div>
+      <div class="first-col">
         <h2>Кто я?</h2>
         <p>
           Я разработчик Ruby on Rails, баскетболист (любитель) и семьянин. Вы можете найти меня на <a href="https://linkedin.com/in/avbabushkin">LinkedIn</a> или написать мне <a href="mailto:alexbub72@dmail.com">email</a>. Больше года работаю с Ruby / Rails, люблю кодить и совершенствовать свои навыки.  
@@ -150,8 +150,8 @@
           <h2>Прочее</h2>          
         </p>
         <div>
-          Немного обо мне :
-          <p>Играю в стритбол, баскетбол. Предпочитаю актиный отдых</p>
+          Впервые прикоснулся к программированию в 2007, когда поступил в институт связи. Первые программы писал на Delphi. 
+          В 2010 перевелся на заочку. Учился и работал (невайти) до 2011, пока не получил повестку в военкомат и отправился <span class="overline"> шапито смотреть</span> служить родине. 
         <!-- books -->
         <!-- <div>
           <h2>Книги</h2>
