social links added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
       </div>
     </div><!--foto name social block end -->
     <hr>
+    <div class="social-wrapper flex-start">
+      <a href="https://github.com/avbabushkin">github</a>
+      <a href="https://t.me/avbabushkin">telegram</a>
+      <a href="https://linkedin.com/in/avbabushkin">linkedin</a>
+      <a href="https://www.facebook.com/babushkin72">facebook</a>
+    </div>
     <div class="item-container item-container-mt sp-between"> <!-- about me block begin -->
       <div class="first-col">
         <h2>Who am I?</h2>
@@ -41,12 +47,6 @@
           <a href="mailto:alexbub72@dmail.com">email</a>.
           I have a 1+ year experience with Ruby / Rails, love coding and improve my skills every day.  
         </p>
-        <div class="item-container social-wrapper flex-start">
-          <a href="https://github.com/avbabushkin">github</a>
-          <a href="https://t.me/avbabushkin">telegram</a>
-          <a href="https://linkedin.com/in/avbabushkin">linkedin</a>
-          <a href="https://www.facebook.com/babushkin72">facebook</a>
-        </div>
       </div>
 
       <div class="second-col">
