--- a/ru.html
+++ b/ru.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     
-    <div class="item-container sp-between item-pb"> <!-- foto name social block begin-->
+    <div class="item-container sp-between item-pb"> <!-- foto name block begin-->
       <div class="first-col first-col-xs">
         <ul>
           <li><h1>Александр</h1></li>
@@ -30,13 +30,14 @@
       <div class="second-col">
         <img src="img/photo2.jpeg" alt="" class="photo">
       </div>
-    </div><!--foto name social block end -->
+    </div><!--foto name block end -->
     <hr>
     <div class="social-wrapper flex-start">
       <a href="https://github.com/avbabushkin">github</a>
       <a href="https://t.me/avbabushkin">telegram</a>
       <a href="https://linkedin.com/in/avbabushkin">linkedin</a>
       <a href="https://www.facebook.com/babushkin72">facebook</a>
+      <a href="https://www.facebook.com/avbabushkin">vk</a>
     </div>
     <div class="item-container sp-between item-container-mt"> <!-- about me block begin -->
       <div class="first-col">
