--- a/ru.html
+++ b/ru.html
@@ -36,8 +36,8 @@
       <a href="https://github.com/avbabushkin">github</a>
       <a href="https://t.me/avbabushkin">telegram</a>
       <a href="https://linkedin.com/in/avbabushkin">linkedin</a>
-      <a href="https://www.facebook.com/babushkin72">facebook</a>
-      <a href="https://www.facebook.com/avbabushkin">vk</a>
+      <a href="https://www.facebook.com/1san90">facebook</a>
+      <a href="https://www.vk.com/avbabushkin">vk</a>
     </div>
     <div class="item-container sp-between item-container-mt"> <!-- about me block begin -->
       <div class="first-col">
