--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="https://github.com/avbabushkin">github</a>
       <a href="https://t.me/avbabushkin">telegram</a>
       <a href="https://linkedin.com/in/avbabushkin">linkedin</a>
-      <a href="https://www.facebook.com/babushkin72">facebook</a>
+      <a href="https://www.facebook.com/1san90">facebook</a>
     </div>
     <div class="item-container item-container-mt sp-between"> <!-- about me block begin -->
       <div class="first-col">
