add target to href

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
     </div><!--foto name social block end -->
     <hr>
     <div class="social-wrapper flex-start">
-      <a href="https://github.com/avbabushkin">github</a>
-      <a href="https://t.me/avbabushkin">telegram</a>
-      <a href="https://linkedin.com/in/avbabushkin">linkedin</a>
-      <a href="https://www.facebook.com/1san90">facebook</a>
+      <a href="https://github.com/avbabushkin" target="_blank" >github</a>
+      <a href="https://t.me/avbabushkin" target="_blank">telegram</a>
+      <a href="https://linkedin.com/in/avbabushkin" target="_blank">linkedin</a>
+      <a href="https://www.facebook.com/1san90" target="_blank">facebook</a>
     </div>
     <div class="item-container item-container-mt sp-between"> <!-- about me block begin -->
       <div class="first-col">
         <h2>Who am I?</h2>
         <p>
           Hi, I am Ruby on Rails developer, baller and family man. You can find me on 
-          <a href="https://linkedin.com/in/avbabushkin">LinkedIn</a> or write an 
+          <a href="https://linkedin.com/in/avbabushkin" target="_blank">LinkedIn</a> or write an 
           <a href="mailto:alexbub72@dmail.com">email</a>.
           I have a 1+ year experience with Ruby / Rails, love coding and improve my skills every day.  
         </p>
@@ -54,7 +54,7 @@
         <ul>
           <li>email: <a href="mailto:alexbub72@dmail.com">alexbub72@gmail.com</a> </li>
           <li>phone: <a href="tel:+79323268892">+79323268892</a></li>
-          <li>telegram: <a href="https://t.me/avbabushkin/">@avbabushkin</a></li>
+          <li>telegram: <a href="https://t.me/avbabushkin/" target="_blank">@avbabushkin</a></li>
         </ul>
       </div>
     </div><!-- About me block end -->
