--- a/ru.html
+++ b/ru.html
@@ -33,23 +33,23 @@
     </div><!--foto name block end -->
     <hr>
     <div class="social-wrapper flex-start">
-      <a href="https://github.com/avbabushkin">github</a>
-      <a href="https://t.me/avbabushkin">telegram</a>
-      <a href="https://linkedin.com/in/avbabushkin">linkedin</a>
-      <a href="https://www.facebook.com/1san90">facebook</a>
-      <a href="https://www.vk.com/avbabushkin">vk</a>
+      <a href="https://github.com/avbabushkin" target="_blank">github</a>
+      <a href="https://t.me/avbabushkin" target="_blank">telegram</a>
+      <a href="https://linkedin.com/in/avbabushkin" target="_blank">linkedin</a>
+      <a href="https://www.facebook.com/1san90" target="_blank">facebook</a>
+      <a href="https://www.vk.com/avbabushkin" target="_blank">vk</a>
     </div>
     <div class="item-container sp-between item-container-mt"> <!-- about me block begin -->
       <div class="first-col">
         <h2>Кто я?</h2>
-        <p>Привет, я разработчик Ruby on Rails, любитель баскетбола и семьянин. Вы можете найти меня на <a href="https://linkedin.com/in/avbabushkin">LinkedIn</a> или написать мне <a href="mailto:alexbub72@dmail.com">email</a>. Работаю с Ruby / Rails больше года. Люблю кодить и совершенствовать свои навыки.</p>
+        <p>Привет, я разработчик Ruby on Rails, любитель баскетбола и семьянин. Вы можете найти меня на <a href="https://linkedin.com/in/avbabushkin" target="_blank">LinkedIn</a> или написать мне <a href="mailto:alexbub72@dmail.com">email</a>. Работаю с Ruby / Rails больше года. Люблю кодить и совершенствовать свои навыки.</p>
       </div>
       <div class="second-col">
         <h2>Контакты</h2>
         <ul>
           <li>email: <a href="mailto:alexbub72@dmail.com">alexbub72@gmail.com</a></li>
           <li>телефон: <a href="tel:+79323268892">+79323268892</a></li>
-          <li>telegram: <a href="https://t.me/avbabushkin/">@avbabushkin</a></li>
+          <li>telegram: <a href="https://t.me/avbabushkin/" target="_blank">@avbabushkin</a></li>
         </ul>
       </div>
     </div><!-- About me block end -->
