--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
           <div class="item-projects">
             <a href="">Good questions</a>
-            <p>Oline course project</p> 
+            <p>Clone ask.fm</p> 
           </div>
         </div>        
       </div>
