--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="first-col first-col-xs">
         <ul>
           <li><h1>Alexandr</h1></li>
-          <li>Ruby developer</li>
+          <li class="position">Ruby developer</li>
           <li>29 years old</li>
           <li>1+ year experience</li>
         </ul>
