--- a/ru.html
+++ b/ru.html
@@ -22,7 +22,7 @@
       <div class="first-col first-col-xs">
         <ul>
           <li><h1>Александр</h1></li>
-          <li>Ruby on Rails разрботчик</li>
+          <li class="position">Ruby on Rails разрботчик</li>
           <li>29 лет</li>
           <li>1+ лет опыта </li>
         </ul>
