--- a/ru.html
+++ b/ru.html
@@ -9,15 +9,11 @@
 </head>
 <body>
   <div class="container"> <!-- MAIN CONTAINER -->
-    <div class="lang-btn-wrapper">
-      <div class="lang-btn">
-        <a href="index.html">English</a></li>
-      </div>
-      <div class="lang-btn">
-        <a href="ru.html">Русский</a></li>
-      </div>
+    <div class="lang">
+      <a href="index.html">English</a>
+      |
+      <a href="ru.html">Русский</a>
     </div>
-    
     <div class="item-container sp-between item-pb"> <!-- foto name block begin-->
       <div class="first-col first-col-xs">
         <ul>
