change email, fix lang

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container"> <!-- MAIN CONTAINER -->
     <div class="lang">
       <a href="index.html">English</a>
-      |          
+      &nbsp;|&nbsp;          
       <a href="ru.html">Русский</a>  
     </div>
     <div class="item-container sp-between item-pb"> <!-- foto name social block begin-->
@@ -48,7 +48,7 @@
       <div class="second-col">
         <h2>Contacts</h2>
         <ul>
-          <li>email: <a href="mailto:alexbub72@dmail.com">alexbub72@gmail.com</a> </li>
+          <li>mail:<a href="mailto:avbabuhkin72@gmail.com">avbabushkin72@gmail.com</a> </li>
           <li>phone: <a href="tel:+79323268892">+79323268892</a></li>
           <li>telegram: <a href="https://t.me/avbabushkin/" target="_blank">@avbabushkin</a></li>
         </ul>
