--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <hr>
     <div class="social-wrapper flex-start">
       <a href="https://github.com/avbabushkin" target="_blank" >github</a>
-      <a href="https://t.me/avbabushkin" target="_blank">telegram</a>
+      <a href="https://ttttt.me/avbabushkin" target="_blank">telegram</a>
       <a href="https://linkedin.com/in/avbabushkin" target="_blank">linkedin</a>
       <a href="https://www.facebook.com/1san90" target="_blank">facebook</a>
     </div>
