--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
             <p>Bicycles & Parts Online store </p>    
           </div>
           <div class="item-projects item-pb-xs">
-            <a href="">SurgutTehnika</a>      
+            <a href="https://avbabushkin.github.io/surguttehnika">SurgutTehnika</a>      
             <p>Rent special vehicle in Surgut city</p>
           </div>
           <div class="item-projects">
-            <a href="">Good questions</a>
+            <a href="https://noaskme.herokuapp.com/">Good questions</a>
             <p>Clone ask.fm</p> 
           </div>
         </div>        
