--- a/ru.html
+++ b/ru.html
@@ -56,7 +56,7 @@
         <div class="skills-wrapper">
           <div class="skills-item skills-pb">
             <h3>Ruby, Ruby on Rails</h3>
-            <p>OOP / MVC / REST / RSpec / Capybara / Slim</p>
+            <p>OOP / MVC / REST / RSpec / minitest </p>
           </div>
           
           <div class="skills-item skills-pb">
@@ -71,7 +71,7 @@
 
           <div class="skills-item skills-pb">
             <h3>Front-end</h3>
-            <p>HTML5 / CSS3 / SASS / Flexbox / JS</p>
+            <p>HTML5 / CSS3 / SASS / Flexbox / JS / Slim</p>
           </div>
           
           <div class="skills-item item-pb-xs">
@@ -107,7 +107,7 @@
             <p>Аренда спецтехники в Сургуте</p>
           </div>
           <div class="item-projects">
-            <a href="">Хорошие вопросы</a>
+            <a href="https://noaskme.herokuapp.com/">Хорошие вопросы</a>
             <p>Учебный проект в рамках курса</p> 
           </div>
         </div>        
