change skills text

--- a/ru.html
+++ b/ru.html
@@ -66,12 +66,12 @@
             
           <div class="skills-item skills-pb">
             <h3>DevOps</h3>
-            <p>Heroku / Docker / Nginx / Redis</p>
+            <p>Heroku деплоил свои badprojects / Nginx: пару раз настраивал / Redis: 1 раз настраивал</p>
           </div>
 
           <div class="skills-item skills-pb">
             <h3>Front-end</h3>
-            <p>HTML5 / CSS3 / SASS / Flexbox / JS / Slim</p>
+            <p>HTML / CSS / SASS / Flexbox / JS / Slim</p>
           </div>
           
           <div class="skills-item item-pb-xs">
