change skills text

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="skills-wrapper">
           <div class="skills-item skills-pb">
             <h3>Ruby, Ruby on Rails</h3>
-            <p>OOP / MVC / REST / RSpec / Capybara / Slim</p>
+            <p>OOP / MVC / REST / RSpec / minitest / Slim</p>
           </div>
           
           <div class="skills-item skills-pb">
@@ -72,12 +72,12 @@
             
           <div class="skills-item skills-pb">
             <h3>DevOps</h3>
-            <p>Heroku / Docker / Nginx / Redis</p>
+            <p>Heroku / Nginx / Redis</p>
           </div>
 
           <div class="skills-item skills-pb">
             <h3>Front-end</h3>
-            <p>HTML5 / CSS3 / SASS / Flexbox / JS</p>
+            <p>HTML / CSS / SASS / Flexbox / JS</p>
           </div>
           <!-- TODO -->
           <!-- padding-->
