--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="item-container sp-between item-pb"> <!-- foto name social block begin-->
       <div class="first-col first-col-xs">
         <ul>
-          <li><h1>Alexandr</h1></li>
+          <li><h1>Alexander</h1></li>
           <li class="position">Ruby developer</li>
           <li>29 years old</li>
           <li>1+ year experience</li>
@@ -124,7 +124,7 @@
     <div class="item-container item-container-mt"><!-- job experience block begin -->
       <div>
         <h2>Experience</h2>
-        17 months only non-profit experience
+        1 year experience 
       </div>
     </div><!-- job experience end-->
 
