--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <!-- custom css -->
   <link rel="stylesheet" href="css/style.css">
-  <title>Alexandr B. Ruby / Rails developer</title>
+  <title>Alexander - Ruby on Rails developer</title>
 </head>
 <body>
   <div class="container"> <!-- MAIN CONTAINER -->
