--- a/ru.html
+++ b/ru.html
@@ -43,7 +43,7 @@
       <div class="second-col">
         <h2>Контакты</h2>
         <ul>
-          <li>mail:<a href="mailto:alexbub72@dmail.com">avbabushkin72@gmail.com</a></li>
+          <li>mail: <a href="mailto:alexbub72@dmail.com">avbabushkin72@gmail.com</a></li>
           <li>телефон: <a href="tel:+79323268892">+79323268892</a></li>
           <li>telegram: <a href="https://t.me/avbabushkin/" target="_blank">@avbabushkin</a></li>
         </ul>
@@ -117,7 +117,7 @@
       <div class="">
         <h2>Опыт</h2>
         <br>
-        Опыт разработки (<span class="overline">bad</span> pet projects) 17 месяцев
+        Более года опыта разработки комерческих и некомерческих проектов
       </div>
     </div><!-- job experience end-->
     
