--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
           <li><h1>Alexander</h1></li>
           <li class="position">Ruby developer</li>
-          <li>29 years old</li>
+          <li>30 years old</li>
           <li>1+ year experience</li>
         </ul>
       </div>
@@ -48,7 +48,7 @@
       <div class="second-col">
         <h2>Contacts</h2>
         <ul>
-          <li>mail:<a href="mailto:avbabuhkin72@gmail.com">avbabushkin72@gmail.com</a> </li>
+          <li>mail: <a href="mailto:avbabuhkin72@gmail.com">avbabushkin72@gmail.com</a> </li>
           <li>phone: <a href="tel:+79323268892">+79323268892</a></li>
           <li>telegram: <a href="https://t.me/avbabushkin/" target="_blank">@avbabushkin</a></li>
         </ul>
@@ -66,8 +66,8 @@
           </div>
           
           <div class="skills-item skills-pb">
-            <h3>SQL</h3>
-            <p>PostgreSQL / SQLite</p>
+            <h3>Data base</h3>
+            <p>PostgreSQL/ mongoDB / SQLite</p>
           </div>
             
           <div class="skills-item skills-pb">
@@ -77,7 +77,7 @@
 
           <div class="skills-item skills-pb">
             <h3>Front-end</h3>
-            <p>HTML / CSS / SASS / Flexbox / JS</p>
+            <p>HTML / CSS / SASS / Flexbox / Bootstrap / JS (beginner)</p>
           </div>
           <!-- TODO -->
           <!-- padding-->
