--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           
           <div class="skills-item skills-pb">
-            <h3>Data base</h3>
+            <h3>Databases</h3>
             <p>PostgreSQL/ mongoDB / SQLite</p>
           </div>
             
