--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="https://github.com/avbabushkin" target="_blank" >github</a>
       <a href="https://ttttt.me/avbabushkin" target="_blank">telegram</a>
       <a href="https://linkedin.com/in/avbabushkin" target="_blank">linkedin</a>
-      <a href="https://www.facebook.com/1san90" target="_blank">facebook</a>
+      <a href="https://www.facebook.com/avbabushkinn" target="_blank">facebook</a>
     </div>
     <div class="item-container item-container-mt sp-between"> <!-- about me block begin -->
       <div class="first-col">
