--- a/index.html
+++ b/index.html
@@ -3,181 +3,64 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <!-- custom css -->
   <link rel="stylesheet" href="css/style.css">
-  <title>Alexander - Ruby on Rails developer</title>
+  <title>Ruby on Rails developer</title>
 </head>
 <body>
-  <div class="container"> <!-- MAIN CONTAINER -->
-    <div class="lang">
-      <a href="index.html">English</a>
-      &nbsp;|&nbsp;
-      <a href="ru.html">Русский</a>
-    </div>
-    <div class="item-container sp-between item-pb"> <!-- foto name social block begin-->
-      <div class="first-col first-col-xs">
-        <ul>
-          <li><h1>Alexander</h1></li>
-          <li class="position">Ruby developer</li>
-          <li>30 years old</li>
-          <li>1+ year experience</li>
-        </ul>
+  <div class="container">
+    <center>
+      <img src="img/photo2.jpeg" alt="" class="photo">
+      <h2>Alexander</h2>
+      <span class="position">Ruby developer</span>
+      <div class="social-wrapper flex-start">
+        <a href="https://github.com/avbabushkin" target="_blank" >github</a>
+        <a href="https://t.me/avbabushkin" target="_blank">telegram</a>
+        <a href="https://linkedin.com/in/avbabushkin" target="_blank">linkedin</a>
+        <a href="https://www.facebook.com/avbabushkinn" target="_blank">facebook</a>
       </div>
-      <div class="second-col">
-        <img src="img/photo2.jpeg" alt="" class="photo">
-      </div>
-    </div><!--foto name social block end -->
-    <hr>
-    <div class="social-wrapper flex-start">
-      <a href="https://github.com/avbabushkin" target="_blank" >github</a>
-      <a href="https://ttttt.me/avbabushkin" target="_blank">telegram</a>
-      <a href="https://linkedin.com/in/avbabushkin" target="_blank">linkedin</a>
-      <a href="https://www.facebook.com/avbabushkinn" target="_blank">facebook</a>
-    </div>
-    <div class="item-container item-container-mt sp-between"> <!-- about me block begin -->
+    </center>
+    <div class="item-container item-container-mt">
       <div class="first-col">
         <h2>Who am I?</h2>
         <p>
-          Hi, I am Ruby on Rails developer, baller and family man. You can find me on
+          Hi, I am Ruby developer, baller and family man. You can find me on
           <a href="https://linkedin.com/in/avbabushkin" target="_blank">LinkedIn</a> or write an
           <a href="mailto:alexbub72@dmail.com">email</a>.
-          I have a 1+ year experience with Ruby / Rails, love coding and improve my skills every day.
+          I have a 2 years experience with Ruby / Rails, love coding and improve my skills every day.
         </p>
       </div>
-
-      <div class="second-col">
-        <h2>Contacts</h2>
-        <ul>
-          <li>mail: <a href="mailto:avbabuhkin72@gmail.com">avbabushkin72@gmail.com</a> </li>
-          <li>phone: <a href="tel:+79323268892">+79323268892</a></li>
-          <li>telegram: <a href="https://t.me/avbabushkin/" target="_blank">@avbabushkin</a></li>
-        </ul>
-      </div>
-    </div><!-- About me block end -->
-
-
-    <div class="item-container item-container-mt sp-between"><!-- skills block begin -->
+    </div>
+    <div class="item-container item-container-mt">
       <div class="first-col">
-        <h2>Skills</h2>
         <div class="skills-wrapper">
           <div class="skills-item skills-pb">
             <h3>Ruby, Ruby on Rails</h3>
-            <p>OOP / MVC / REST / RSpec / minitest / Slim</p>
+            <p>OOP / MVC / REST / RSpec / Slim</p>
           </div>
-
           <div class="skills-item skills-pb">
             <h3>Databases</h3>
-            <p>PostgreSQL/ mongoDB / SQLite</p>
+            <p>PostgreSQL / mongoDB / Redis</p>
           </div>
-
           <div class="skills-item skills-pb">
             <h3>DevOps</h3>
-            <p>Heroku / Nginx / Redis</p>
+            <p>Heroku / Nginx / Docker / Capistrano</p>
           </div>
-
           <div class="skills-item skills-pb">
             <h3>Front-end</h3>
-            <p>HTML / CSS / SASS / Flexbox / Bootstrap / JS (beginner)</p>
+            <p>HTML / CSS / SASS / Flexbox / Bootstrap / JS</p>
           </div>
-          <!-- TODO -->
-          <!-- padding-->
           <div class="skills-item item-pb-xs">
             <h3>Git</h3>
-            <p>GitHub</p>
+            <p>GitHub / GitLab</p>
           </div>
-
           <div class="skills-item">
             <h3>Unix</h3>
             <p>Ubuntu</p>
           </div>
         </div>
       </div>
-      <div class="second-col">
-        <h2>Languages</h2>
-        <ul>
-          <li>Russian - native</li>
-          <li>English -  Intermediate</li>
-        </ul>
-      </div>
-    </div><!-- skills block end -->
-
-    <div class="item-container item-container-mt"> <!-- badprojects begin -->
-      <div class="projects-wrapper">
-        <h2>Projects</h2>
-        <div class="item-projects-wrapper">
-          <div class="item-projects item-pb-xs">
-            <a href="">KyivVelo</a>
-            <p>Bicycles & Parts Online store </p>
-          </div>
-          <div class="item-projects item-pb-xs">
-            <a href="https://avbabushkin.github.io/surguttehnika">SurgutTehnika</a>
-            <p>Rent special vehicle in Surgut city</p>
-          </div>
-          <div class="item-projects">
-            <a href="https://noaskme.herokuapp.com/">Good questions</a>
-            <p>Clone ask.fm</p>
-          </div>
-        </div>
-      </div>
-    </div><!-- bagprojects bloock-->
-
-    <div class="item-container item-container-mt"><!-- job experience block begin -->
-      <div>
-        <h2>Experience</h2>
-        1 year experience
-      </div>
-    </div><!-- job experience end-->
-
-    <div class="item-container item-container-mt"><!-- education block begin -->
-      <div class="edu-wrapper">
-        <h2>Education</h2>
-
-        <div class="edu-describe-wrapper">
-
-          <div class="edu-describe edu-describe-pb">
-            SIBERIAN STATE UNIVERSITY OF TELECOMMUNICATIONS AND INFORMATION SCIENCES 2007 - 2014
-            <p>specialty - computer software and automated systems</p>
-            <p>qualification - software engineer</p>
-          </div>
-
-          <div class="edu-describe">
-            GOODPROGRAMMER ONLINE COURSE 2017
-            <p>Ruby on Rails online course</p>
-            <p><a href="https://goodprogrammer.ru">goodprogrammer.ru</a></p>
-          </div>
-
-        </div>
-
-      </div>
-    </div> <!-- education block end-->
-
-    <!-- Other block -->
-    <div class="item-container item-container-mt">
-      <div>
-        <p>
-          <h2>Other</h2>
-        </p>
-        <!-- books -->
-        <!-- <div>
-          Books
-          <ul>
-            <li>Hal Fulton - The Ruby Way</li>
-            <li>Ruby on Rails Tutorial - by Michael Hartl</li>
-            <li>Steven C. McConnell - Code Complete</li>
-            <li>Grady Booch - Object-Oriented Analysis and Design with Applications</li>
-            <li>Alan Beaulieu - Learning SQL</li>
-          </ul>
-        </div> -->
-        <div>
-          Deep learn now:
-          <ul>
-            <li>JavaScript</li>
-            <li>React</li>
-          </ul>
-        </div>
-      </div>
     </div>
-  </div><!-- END MAIN CONTAINER  -->
+  </div>
   <footer>
     <div class="container">
       <div class="item-container sp-between">
