--- a/index.html
+++ b/index.html
@@ -23,39 +23,43 @@
       <div class="first-col">
         <h2>Who am I?</h2>
         <p>
-          Hi, I am Ruby developer, baller and family man. You can find me on
+          Кто я?
+          Hi, I am Ruby developer, baller &#127936; and family man . You can find me on
           <a href="https://linkedin.com/in/avbabushkin" target="_blank">LinkedIn</a> or write an
           <a href="mailto:alexbub72@dmail.com">email</a>.
-          I have a 2 years experience with Ruby / Rails, love coding and improve my skills every day.
+          I have a 4 years experience with Ruby / Rails and love coding.
         </p>
       </div>
     </div>
     <div class="item-container item-container-mt">
+      <h2>Опыт</h2>
       <div class="first-col">
         <div class="skills-wrapper">
           <div class="skills-item skills-pb">
-            <h3>Ruby, Ruby on Rails</h3>
-            <p>OOP / MVC / REST / RSpec / Slim</p>
+            <h3>2023 - настоящее время</h3>
           </div>
           <div class="skills-item skills-pb">
-            <h3>Databases</h3>
-            <p>PostgreSQL / mongoDB / Redis</p>
+            <h3>Промсвязьбанк</h3>
+            <p>backend разработчик</p>
+            <p>Разработка образовательной платформы Содружество </p>
+            <a href="https://sodrujestvo.org">sodrujestvo.org</a>
           </div>
           <div class="skills-item skills-pb">
-            <h3>DevOps</h3>
-            <p>Heroku / Nginx / Docker / Capistrano</p>
+            <h3>2020 - 2023</h3>
           </div>
           <div class="skills-item skills-pb">
-            <h3>Front-end</h3>
-            <p>HTML / CSS / SASS / Flexbox / Bootstrap / JS</p>
+            <h3>Инфосистемы джет</h3>
+            <p>backend разработчик</p>
+            <p>Участие в разработке проекта ЕГРН (единый госурдарственный реестр недвижимоти)- для Росреестра - </p>
+            <a href="https://rosreestr.gov.ru">rosreestr.gov.ru</a>
           </div>
           <div class="skills-item item-pb-xs">
-            <h3>Git</h3>
-            <p>GitHub / GitLab</p>
+            <h3>2019-2020</h3>
           </div>
           <div class="skills-item">
-            <h3>Unix</h3>
-            <p>Ubuntu</p>
+            <h3>Premium IT solution</h3>
+            <p>backend разработчик</p>
+            <p>Работал в качестве подрядчика компании Инфосистемы джет</p>
           </div>
         </div>
       </div>
