--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           Кто я?
           Hi, I am Ruby developer, baller &#127936; and family man . You can find me on
           <a href="https://linkedin.com/in/avbabushkin" target="_blank">LinkedIn</a> or write an
-          <a href="mailto:alexbub72@dmail.com">email</a>.
+          <a href="mailto:avbabushkin72@gmail.com">email</a>.
           I have a 4 years experience with Ruby / Rails and love coding.
         </p>
       </div>
