--- a/index.html
+++ b/index.html
@@ -23,12 +23,41 @@
       <div class="first-col">
         <h2>Who am I?</h2>
         <p>
-          Кто я?
           Hi, I am Ruby developer, baller &#127936; and family man . You can find me on
           <a href="https://linkedin.com/in/avbabushkin" target="_blank">LinkedIn</a> or write an
           <a href="mailto:avbabushkin72@gmail.com">email</a>.
           I have a 4 years experience with Ruby / Rails and love coding.
         </p>
+      </div>
+    </div>
+    <div class="item-container item-container-mt">
+      <div class="first-col">
+        <div class="skills-wrapper">
+          <div class="skills-item skills-pb">
+            <h3>Ruby, Ruby on Rails</h3>
+            <p>OOP / MVC / REST / RSpec / Slim</p>
+          </div>
+          <div class="skills-item skills-pb">
+            <h3>Databases</h3>
+            <p>PostgreSQL / mongoDB / Redis</p>
+          </div>
+          <div class="skills-item skills-pb">
+            <h3>DevOps</h3>
+            <p>Heroku / Nginx / Docker / Capistrano</p>
+          </div>
+          <div class="skills-item skills-pb">
+            <h3>Front-end</h3>
+            <p>HTML / CSS / SASS / Flexbox / Bootstrap / JS</p>
+          </div>
+          <div class="skills-item item-pb-xs">
+            <h3>Git</h3>
+            <p>GitHub / GitLab</p>
+          </div>
+          <div class="skills-item">
+            <h3>Unix</h3>
+            <p>Ubuntu</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="item-container item-container-mt">
