--- a/index.html
+++ b/index.html
@@ -61,15 +61,20 @@
       </div>
     </div>
     <div class="item-container item-container-mt">
-      <h2>Опыт</h2>
+      <div class="first-col">
+        <h1>Опыт</h1>
+      </div>
+    </div>
+    <div class="item-container item-container-mt">
       <div class="first-col">
         <div class="skills-wrapper">
           <div class="skills-item skills-pb">
-            <h3>2023 - настоящее время</h3>
+            <h3>2023 - н. в.</h3>
           </div>
           <div class="skills-item skills-pb">
             <h3>Промсвязьбанк</h3>
             <p>backend разработчик</p>
+            <br>
             <p>Разработка образовательной платформы Содружество </p>
             <a href="https://sodrujestvo.org">sodrujestvo.org</a>
           </div>
@@ -79,16 +84,19 @@
           <div class="skills-item skills-pb">
             <h3>Инфосистемы джет</h3>
             <p>backend разработчик</p>
+            <br>
             <p>Участие в разработке проекта ЕГРН (единый госурдарственный реестр недвижимоти)- для Росреестра - </p>
             <a href="https://rosreestr.gov.ru">rosreestr.gov.ru</a>
           </div>
           <div class="skills-item item-pb-xs">
-            <h3>2019-2020</h3>
+            <h3>2019 - 2020</h3>
           </div>
           <div class="skills-item">
             <h3>Premium IT solution</h3>
             <p>backend разработчик</p>
+            <br>
             <p>Работал в качестве подрядчика компании Инфосистемы джет</p>
+            <a href="https://https://premiumitsolution.com/">https://premiumitsolution.com</a>
           </div>
         </div>
       </div>
